@@ -132,7 +132,35 @@ name|lucene
 operator|.
 name|document
 operator|.
+name|Document
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
 name|Field
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|FieldType
 import|;
 end_import
 
@@ -270,49 +298,7 @@ name|lucene
 operator|.
 name|index
 operator|.
-name|IndexDocument
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
 name|IndexableField
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexableFieldType
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|StorableField
 import|;
 end_import
 
@@ -794,13 +780,13 @@ name|dim
 argument_list|)
 expr_stmt|;
 block|}
-comment|/** Translates any added {@link FacetField}s into normal    *  fields for indexing; only use this version if you    *  did not add any taxonomy-based fields ({@link    *  FacetField} or {@link AssociationFacetField}) */
+comment|/**    * Translates any added {@link FacetField}s into normal fields for indexing;    * only use this version if you did not add any taxonomy-based fields (    * {@link FacetField} or {@link AssociationFacetField}).    *     *<p>    *<b>NOTE:</b> you should add the returned document to IndexWriter, not the    * input one!    */
 DECL|method|build
 specifier|public
-name|IndexDocument
+name|Document
 name|build
 parameter_list|(
-name|IndexDocument
+name|Document
 name|doc
 parameter_list|)
 throws|throws
@@ -815,16 +801,16 @@ name|doc
 argument_list|)
 return|;
 block|}
-comment|/** Translates any added {@link FacetField}s into normal    *  fields for indexing. */
+comment|/**    * Translates any added {@link FacetField}s into normal fields for indexing.    *     *<p>    *<b>NOTE:</b> you should add the returned document to IndexWriter, not the    * input one!    */
 DECL|method|build
 specifier|public
-name|IndexDocument
+name|Document
 name|build
 parameter_list|(
 name|TaxonomyWriter
 name|taxoWriter
 parameter_list|,
-name|IndexDocument
+name|Document
 name|doc
 parameter_list|)
 throws|throws
@@ -1381,30 +1367,11 @@ throw|;
 block|}
 block|}
 block|}
-name|List
-argument_list|<
-name|Field
-argument_list|>
-name|addedIndexedFields
+name|Document
+name|result
 init|=
 operator|new
-name|ArrayList
-argument_list|<
-name|Field
-argument_list|>
-argument_list|()
-decl_stmt|;
-name|List
-argument_list|<
-name|Field
-argument_list|>
-name|addedStoredFields
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|Field
-argument_list|>
+name|Document
 argument_list|()
 decl_stmt|;
 name|processFacetFields
@@ -1413,18 +1380,14 @@ name|taxoWriter
 argument_list|,
 name|byField
 argument_list|,
-name|addedIndexedFields
-argument_list|,
-name|addedStoredFields
+name|result
 argument_list|)
 expr_stmt|;
 name|processSSDVFacetFields
 argument_list|(
 name|dvByField
 argument_list|,
-name|addedIndexedFields
-argument_list|,
-name|addedStoredFields
+name|result
 argument_list|)
 expr_stmt|;
 name|processAssocFacetFields
@@ -1433,38 +1396,22 @@ name|taxoWriter
 argument_list|,
 name|assocByField
 argument_list|,
-name|addedIndexedFields
-argument_list|,
-name|addedStoredFields
+name|result
 argument_list|)
 expr_stmt|;
 comment|//System.out.println("add stored: " + addedStoredFields);
-specifier|final
-name|List
-argument_list|<
-name|IndexableField
-argument_list|>
-name|allIndexedFields
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|IndexableField
-argument_list|>
-argument_list|()
-decl_stmt|;
 for|for
 control|(
-name|IndexableField
+name|Field
 name|field
 range|:
 name|doc
 operator|.
-name|indexableFields
+name|getFields
 argument_list|()
 control|)
 block|{
-name|IndexableFieldType
+name|FieldType
 name|ft
 init|=
 name|field
@@ -1493,7 +1440,7 @@ operator|.
 name|TYPE
 condition|)
 block|{
-name|allIndexedFields
+name|result
 operator|.
 name|add
 argument_list|(
@@ -1502,89 +1449,10 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-name|allIndexedFields
-operator|.
-name|addAll
-argument_list|(
-name|addedIndexedFields
-argument_list|)
-expr_stmt|;
-specifier|final
-name|List
-argument_list|<
-name|StorableField
-argument_list|>
-name|allStoredFields
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|StorableField
-argument_list|>
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|StorableField
-name|field
-range|:
-name|doc
-operator|.
-name|storableFields
-argument_list|()
-control|)
-block|{
-name|allStoredFields
-operator|.
-name|add
-argument_list|(
-name|field
-argument_list|)
-expr_stmt|;
-block|}
-name|allStoredFields
-operator|.
-name|addAll
-argument_list|(
-name|addedStoredFields
-argument_list|)
-expr_stmt|;
 comment|//System.out.println("all indexed: " + allIndexedFields);
 comment|//System.out.println("all stored: " + allStoredFields);
 return|return
-operator|new
-name|IndexDocument
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|Iterable
-argument_list|<
-name|IndexableField
-argument_list|>
-name|indexableFields
-parameter_list|()
-block|{
-return|return
-name|allIndexedFields
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|Iterable
-argument_list|<
-name|StorableField
-argument_list|>
-name|storableFields
-parameter_list|()
-block|{
-return|return
-name|allStoredFields
-return|;
-block|}
-block|}
+name|result
 return|;
 block|}
 DECL|method|processFacetFields
@@ -1606,17 +1474,8 @@ argument_list|>
 argument_list|>
 name|byField
 parameter_list|,
-name|List
-argument_list|<
-name|Field
-argument_list|>
-name|addedIndexedFields
-parameter_list|,
-name|List
-argument_list|<
-name|Field
-argument_list|>
-name|addedStoredFields
+name|Document
+name|doc
 parameter_list|)
 throws|throws
 name|IOException
@@ -1909,7 +1768,7 @@ name|i
 operator|++
 control|)
 block|{
-name|addedIndexedFields
+name|doc
 operator|.
 name|add
 argument_list|(
@@ -1939,7 +1798,7 @@ block|}
 block|}
 comment|// Facet counts:
 comment|// DocValues are considered stored fields:
-name|addedStoredFields
+name|doc
 operator|.
 name|add
 argument_list|(
@@ -1973,17 +1832,8 @@ argument_list|>
 argument_list|>
 name|byField
 parameter_list|,
-name|List
-argument_list|<
-name|Field
-argument_list|>
-name|addedIndexedFields
-parameter_list|,
-name|List
-argument_list|<
-name|Field
-argument_list|>
-name|addedStoredFields
+name|Document
+name|doc
 parameter_list|)
 throws|throws
 name|IOException
@@ -2061,7 +1911,7 @@ argument_list|)
 decl_stmt|;
 comment|//System.out.println("add " + fullPath);
 comment|// For facet counts:
-name|addedStoredFields
+name|doc
 operator|.
 name|add
 argument_list|(
@@ -2079,7 +1929,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// For drill-down:
-name|addedIndexedFields
+name|doc
 operator|.
 name|add
 argument_list|(
@@ -2098,7 +1948,7 @@ name|NO
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|addedIndexedFields
+name|doc
 operator|.
 name|add
 argument_list|(
@@ -2141,17 +1991,8 @@ argument_list|>
 argument_list|>
 name|byField
 parameter_list|,
-name|List
-argument_list|<
-name|Field
-argument_list|>
-name|addedIndexedFields
-parameter_list|,
-name|List
-argument_list|<
-name|Field
-argument_list|>
-name|addedStoredFields
+name|Document
+name|doc
 parameter_list|)
 throws|throws
 name|IOException
@@ -2388,7 +2229,7 @@ operator|.
 name|length
 expr_stmt|;
 block|}
-name|addedStoredFields
+name|doc
 operator|.
 name|add
 argument_list|(
