@@ -114,20 +114,6 @@ name|lucene
 operator|.
 name|index
 operator|.
-name|IndexDocument
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
 name|IndexWriter
 import|;
 end_import
@@ -433,9 +419,8 @@ literal|"b"
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|IndexDocument
-name|facetDoc
-init|=
+name|doc
+operator|=
 name|facetsConfig
 operator|.
 name|build
@@ -444,20 +429,20 @@ name|taxoWriter
 argument_list|,
 name|doc
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 comment|// these two addDocument() used to fail
 name|indexWriter
 operator|.
 name|addDocument
 argument_list|(
-name|facetDoc
+name|doc
 argument_list|)
 expr_stmt|;
 name|indexWriter
 operator|.
 name|addDocument
 argument_list|(
-name|facetDoc
+name|doc
 argument_list|)
 expr_stmt|;
 name|IOUtils
